refactor(EventPlanner): 불필요한 메서드 제거, 할인이 없을 시 null대신 빈 리스트 반환